[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-multicol/crashtests/spanner-in-inline-after-very-tall-content-001.html https://bugs.webkit.org/show_bug.cgi?id=303235

Reviewed by Antti Koivisto.

Take partial line count (previous lines) into account when searching for the trailing line with block content.
(In InlineFormattingContext::lineLayout, layoutResult.displayContent does not contain
the previous display lines, only the newly created ones. Display line with line index of
10 could be the first entry in displayContent here.)

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::handleAfterSideMargin):
(WebCore::Layout::InlineFormattingContext::lineLayout):

Canonical link: https://commits.webkit.org/303629@main